Fixed scrollbar width

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -193,6 +193,10 @@ a{
   border-top: none;
 }
 
+.cf-grid>table>tr>td:last-child, .cf-grid>table>tr>th:last-child{
+  width: 120px;
+}
+
 .btn{
   color: rgb(233, 233, 233);
   height: 30px;
@@ -252,7 +256,7 @@ a{
 }
 
 .cf-coffee-container{
-  width: 730px;
+  width: 735px;
   height: 500px;
   background-color: rgb(213, 213, 213);
   overflow-y: scroll;
@@ -333,7 +337,6 @@ a{
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
 }
 
 /* Track */
